[gd_scene load_steps=6 format=3 uid="uid://71shikfqxoqx"]

[ext_resource type="Script" path="res://interfaceScenes/menu.gd" id="1_d4jp2"]
[ext_resource type="Theme" uid="uid://detsu6arwhhvh" path="res://assets/mainTheme.tres" id="2_5cn45"]
[ext_resource type="PackedScene" uid="uid://kcgx30huew1l" path="res://Profiles/profileStatViewer.tscn" id="3_rlumg"]

[sub_resource type="InputEventKey" id="InputEventKey_be815"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_4oxa0"]
events = [SubResource("InputEventKey_be815")]

[node name="Menu" type="Node2D"]
script = ExtResource("1_d4jp2")

[node name="Level1Button" type="Button" parent="."]
offset_left = 143.0
offset_top = 217.0
offset_right = 306.0
offset_bottom = 285.0
theme = ExtResource("2_5cn45")
text = "Level 1"

[node name="ShopButton" type="Button" parent="."]
offset_left = 1352.0
offset_top = 99.0
offset_right = 1542.0
offset_bottom = 156.0
theme = ExtResource("2_5cn45")
text = "Metacoins Shop"

[node name="BackButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 56.0
offset_right = 64.0
offset_bottom = 89.0
theme = ExtResource("2_5cn45")
shortcut = SubResource("Shortcut_4oxa0")
text = "<"

[node name="ProfileStatViewer" parent="." instance=ExtResource("3_rlumg")]
position = Vector2(1576, 99)

[node name="Level2Button" type="Button" parent="."]
offset_left = 400.0
offset_top = 217.0
offset_right = 563.0
offset_bottom = 285.0
theme = ExtResource("2_5cn45")
text = "Level 2"

[connection signal="pressed" from="Level1Button" to="." method="_on_buttonLvl1_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
